[package]
name = "flux-sdk-rs"
version = "0.1.0"
authors = ["Flux Contributors <contributors@flux.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
serde = "1.0.118"
